Fix image sizing and spacing

--- a/src/components/Image/Image.css
+++ b/src/components/Image/Image.css
@@ -2,14 +2,17 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding-bottom: 1rem;
     text-align: center;
 }
 
 .space-image-box > img {
-    border-radius: 8px;
-    height: 14rem;
-    width: 14rem;
+    border-radius: 8px 8px 0px 0px;
+    height: auto;
+    width: 100%;
 }
 
 .like-button {
